--- a/David_burgers/index.html
+++ b/David_burgers/index.html
@@ -4,17 +4,26 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
-    <title>Labels</title>
+    <title>Range Input</title>
   </head>
   <body>
     <section id="overlay">
       <img src="https://content.codecademy.com/courses/web-101/unit-6/htmlcss1-img_burger-logo.svg" alt="Davie's Burgers Logo" id="logo">
       <hr>
       <form>
-				<h1>Login to start creating a burger!</h1>
-        <!--Add your code below-->
-				<label for="username">Username</label>
-        <input type="text" name="username" id="username">
+        <h1>Create a burger!</h1>
+				<section class="protein">
+          <label for="patty">What type of protein would you like?</label>
+    			<input type="text" name="patty" id="patty" value="beef">
+        </section>
+        <hr>
+
+        <section class="patties">
+          <label for="amount">How many patties would you like?</label>
+	        <!--Add your code below-->
+					<input id="amount" type="number" step="1" name="amount">
+          
+        </section>
       </form>
     </section>
   </body>
